color pallete added

--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
         <div>
           <button><i class="fa fa-play"></i></button>
         </div>
-        <span class="btn" id="export-button"
-          ><i class="fa-solid fa-image"></i
-        ></span>
+        <div class="btn" id="export-button">
+          <i class="fa-solid fa-image"></i>
+        </div>
+        <!-- <div class="btn" id="customizer">
+          <i class="fa-solid fa-palette"></i>
+        </div> -->
       </div>
     </div>
   </body>
