--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </div> -->
       </div>
     </div>
-
+    <!-- 
     <div class="container">
     
-    </div>
+    </div> -->
   </body>
 </html>
